// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-moneyfield Basic 1`] = `
<div>
  <div>
    <div
      class="m-moneyfield"
      style="width: 100%; max-width: 136px;"
    >
      <div
        class="m-input-style m-decimalfield m--is-tag-default"
        style="width: 100%; max-width: 136px;"
      >
        <div
          class="m-input-style__main"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                 
                <input
                  aria-describedby="fakeId"
                  class="m-decimalfield__input"
                  id="mDecimalfield-fakeId"
                  inputmode="decimal"
                />
                   
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <span
                  class="m-moneyfield__currency-symbol"
                >
                  
                $ CA
            
                </span>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-decimalfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-decimalfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="m-moneyfield"
      style="width: 100%; max-width: 136px;"
    >
      <div
        class="m-input-style m-decimalfield m--has-label m--is-tag-default"
        style="width: 100%; max-width: 136px;"
      >
        <div
          class="m-input-style__main"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="mDecimalfield-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Label
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                 
                <input
                  aria-describedby="fakeId"
                  class="m-decimalfield__input"
                  id="mDecimalfield-fakeId"
                  inputmode="decimal"
                />
                   
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <span
                  class="m-moneyfield__currency-symbol"
                >
                  
                $ CA
            
                </span>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-decimalfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-decimalfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="m-moneyfield"
      style="width: 100%; max-width: 136px;"
    >
      <div
        class="m-input-style m-decimalfield m--has-label m--is-tag-default"
        style="width: 100%; max-width: 136px;"
      >
        <div
          class="m-input-style__main"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="mDecimalfield-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Required label
                </span>
                 
                <sup
                  aria-hidden="true"
                  class="m-input-style__required-marker"
                >
                  
                        *
                    
                </sup>
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                 
                <input
                  aria-describedby="fakeId"
                  class="m-decimalfield__input"
                  id="mDecimalfield-fakeId"
                  inputmode="decimal"
                  required="required"
                />
                   
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <span
                  class="m-moneyfield__currency-symbol"
                >
                  
                $ CA
            
                </span>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-decimalfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-decimalfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="m-moneyfield"
      style="width: 100%; max-width: 136px;"
    >
      <div
        class="m-input-style m-decimalfield m--is-valid m--has-validation-message m--is-tag-default"
        style="width: 100%; max-width: 136px;"
      >
        <div
          class="m-input-style__main"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                 
                <input
                  aria-describedby="fakeId"
                  class="m-decimalfield__input"
                  id="mDecimalfield-fakeId"
                  inputmode="decimal"
                />
                   
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <span
                  class="m-moneyfield__currency-symbol"
                >
                  
                $ CA
            
                </span>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-decimalfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-decimalfield__validation-message"
            >
              <p
                aria-live="polite"
                class="m-validation-message__valid"
              >
                <svg
                  class="m-svg m-validation-message__icon"
                  height="1em"
                  width="1em"
                >
                  <title>
                    Valide
                  </title>
                </svg>
                 
                <span
                  class="m-validation-message__text"
                >
                  Valid message
                </span>
              </p>
               
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="m-moneyfield"
      style="width: 100%; max-width: 136px;"
    >
      <div
        class="m-input-style m-decimalfield m--has-validation-message m--is-tag-default"
        style="width: 100%; max-width: 136px;"
      >
        <div
          class="m-input-style__main"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                 
                <input
                  aria-describedby="fakeId"
                  class="m-decimalfield__input"
                  id="mDecimalfield-fakeId"
                  inputmode="decimal"
                />
                   
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <span
                  class="m-moneyfield__currency-symbol"
                >
                  
                $ CA
            
                </span>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-decimalfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-decimalfield__validation-message"
            >
              <!---->
               
              <p
                class="m-validation-message__helper"
              >
                Helper message
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="m-moneyfield"
      style="width: 100%; max-width: 136px;"
    >
      <div
        class="m-input-style m-decimalfield m--has-error m--has-validation-message m--is-tag-default"
        style="width: 100%; max-width: 136px;"
      >
        <div
          class="m-input-style__main"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                 
                <input
                  aria-describedby="fakeId"
                  aria-invalid="true"
                  class="m-decimalfield__input"
                  id="mDecimalfield-fakeId"
                  inputmode="decimal"
                />
                   
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <span
                  class="m-moneyfield__currency-symbol"
                >
                  
                $ CA
            
                </span>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-decimalfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-decimalfield__validation-message"
            >
              <p
                aria-live="polite"
                class="m-validation-message__error"
              >
                <svg
                  class="m-svg m-validation-message__icon"
                  height="1em"
                  width="1em"
                >
                  <title>
                    Erreur
                  </title>
                </svg>
                 
                <span
                  class="m-validation-message__text"
                >
                  Error message
                </span>
              </p>
               
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-moneyfield Custom precision 1`] = `
<div
  class="m-moneyfield"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m-decimalfield m--has-value m--is-tag-default"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
             
            <input
              aria-describedby="fakeId"
              class="m-decimalfield__input"
              id="mDecimalfield-fakeId"
              inputmode="decimal"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <span
              class="m-moneyfield__currency-symbol"
            >
              
                $ CA
            
            </span>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-decimalfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-decimalfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-moneyfield Default precision 1`] = `
<div
  class="m-moneyfield"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m-decimalfield m--has-value m--is-tag-default"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
             
            <input
              aria-describedby="fakeId"
              class="m-decimalfield__input"
              id="mDecimalfield-fakeId"
              inputmode="decimal"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <span
              class="m-moneyfield__currency-symbol"
            >
              
                $ CA
            
            </span>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-decimalfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-decimalfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-moneyfield Localization 1`] = `
<div
  class="m-moneyfield"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m-decimalfield m--has-value m--is-tag-default"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
             
            <input
              aria-describedby="fakeId"
              class="m-decimalfield__input"
              id="mDecimalfield-fakeId"
              inputmode="decimal"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <span
              class="m-moneyfield__currency-symbol"
            >
              
                $ CA
            
            </span>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-decimalfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-decimalfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-moneyfield States 1`] = `
<div>
  <div>
    <div
      class="m-moneyfield"
      style="width: 100%; max-width: 136px;"
    >
      <div
        class="m-input-style m-decimalfield m--is-disabled m--has-value m--is-tag-default"
        style="width: 100%; max-width: 136px;"
      >
        <div
          class="m-input-style__main"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                 
                <input
                  aria-describedby="fakeId"
                  class="m-decimalfield__input"
                  disabled="disabled"
                  id="mDecimalfield-fakeId"
                  inputmode="decimal"
                  placeholder="Disabled"
                />
                   
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <span
                  class="m-moneyfield__currency-symbol"
                >
                  
                $ CA
            
                </span>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-decimalfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-decimalfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="m-moneyfield"
      style="width: 100%; max-width: 136px;"
    >
      <div
        class="m-input-style m-decimalfield m--is-readonly m--has-value m--is-tag-default"
        style="width: 100%; max-width: 136px;"
      >
        <div
          class="m-input-style__main"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                 
                <input
                  aria-describedby="fakeId"
                  class="m-decimalfield__input"
                  id="mDecimalfield-fakeId"
                  inputmode="decimal"
                  placeholder="Read-only"
                  readonly="readonly"
                />
                   
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <span
                  class="m-moneyfield__currency-symbol"
                >
                  
                $ CA
            
                </span>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-decimalfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-decimalfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="m-moneyfield"
      style="width: 100%; max-width: 136px;"
    >
      <div
        class="m-input-style m-decimalfield m--is-label-up m--is-waiting m--has-label m--has-value m--is-tag-default"
        style="width: 100%; max-width: 136px;"
      >
        <div
          class="m-input-style__main"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="mDecimalfield-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  label bla label
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                 
                <input
                  aria-describedby="fakeId"
                  class="m-decimalfield__input"
                  id="mDecimalfield-fakeId"
                  inputmode="decimal"
                  placeholder="Waiting"
                  readonly="readonly"
                />
                   
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <span
                  class="m-moneyfield__currency-symbol"
                >
                  
                $ CA
            
                </span>
                 
                <div
                  class="m-spinner m-input-style__spinner"
                >
                  <!---->
                   
                  <div />
                </div>
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-decimalfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-decimalfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-moneyfield With initial value (0) 1`] = `
<div
  class="m-moneyfield"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m-decimalfield m--has-value m--is-tag-default"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
             
            <input
              aria-describedby="fakeId"
              class="m-decimalfield__input"
              id="mDecimalfield-fakeId"
              inputmode="decimal"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <span
              class="m-moneyfield__currency-symbol"
            >
              
                $ CA
            
            </span>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-decimalfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-decimalfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-moneyfield With initial value 1`] = `
<div
  class="m-moneyfield"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m-decimalfield m--has-value m--is-tag-default"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
             
            <input
              aria-describedby="fakeId"
              class="m-decimalfield__input"
              id="mDecimalfield-fakeId"
              inputmode="decimal"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <span
              class="m-moneyfield__currency-symbol"
            >
              
                $ CA
            
            </span>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-decimalfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-decimalfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;
